@@ -244,23 +244,26 @@ int main(int argc, char *argv[])
 	bTerminateFlag = false;
 	while (g_continue_flag)
 	{
+		sleep(1);
+
 		if (bTerminateFlag)
 		{
-			pthread_kill(schedule_tid, SIGINT);
-
 			g_continue_flag = false;
+
+			if (g_schedule_flag)
+			{
+				pthread_kill(schedule_tid, SIGINT);
+			}
 			kill_work_threads(tids, g_max_connections);
 			g_thread_kill_done = true;
 
 			break;
 		}
-
-		sleep(1);
 	}
 
 	while ((g_tracker_thread_count != 0) || g_schedule_flag)
 	{
-		sleep(1);
+		usleep(50000);
 	}
 	
 	tracker_mem_destroy();
